# fluid-img

./: .ai_project_state  .cursorrules  .gitignore  .prettierrc.json  LICENSE  README.md  package-lock.json  package.json  polyphasic-cloud-fn.js  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: deploy.yml
benchmarks/: debug-seam-test.js  deletion-tracking.js  foreach-vs-for.js  hash-vs-set.js  if-vs-ternary.js  math-round-optimization.js  pop-vs-splice.js  production-seam-test.js  quickselect-vs-sort.js  seam-removal-2d.js  seam-removal.js  sobel-optimization.js  splice-comparison-benchmark.js  subarray-performance.js  test.js  typed-vs-regular-arrays.js  typedarray-splice-benchmark.js
benchmarks/wasm-simd/: Cargo.toml  Makefile  build.sh  fix-rust.sh  index.html  install-rust.sh
benchmarks/wasm-simd/src/: lib.rs  simd_helpers.rs
public/: App.css  ImageSelector.css  bundle.css  bundle.css.map  bundle.js  bundle.js.map  fluid-demo.html  fluid-img-demo.js  fluid-img-demo.js.map  fluid-img-predictive.js  fluid-img-predictive.js.map  fluid-img-random.js  fluid-img-random.js.map  fluid-img.js  fluid-img.js.map  img-responsive-web-component.js  index.html  responsive-demo.html  responsive-img-predictive.js  responsive-img-web-component.js  web-component.minified.js
scripts/: build.js  generate-no-mangle.js  no-mangle.js
src/: App.jsx
src/components/: ButtonGroup.jsx  CodePreview.jsx  Controls.jsx  Draggable.jsx  HelpTooltip.jsx  ImageSelector.jsx  ImageUploader.jsx  LogWindow.jsx  ResizableContainer.jsx  Seam.jsx  SizeIndicator.jsx
(+56 files in other folders)
