[package]
name = "seam-removal-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wee_alloc = "0.4.5"
rand = { version = "0.8", features = ["small_rng"] }
rand_xoshiro = "0.6"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
]

[profile.release]
opt-level = 3
lto = true

# Add this section for WASM target configuration
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"] 